--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.5.0
   firebase_auth:  ^5.3.0
   google_maps_flutter: ^2.9.0
+  intl: ^0.18.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
